Thoughtlog: Added tags, category and score to thought model.
* Also added filters to /thoughts, so that now a user can filter
  thoughts based on the tags he like.
